Fixed overlapping issues

--- a/src/pages/home/Home.scss
+++ b/src/pages/home/Home.scss
@@ -81,7 +81,7 @@
         display: flex;
         align-items: center;
     }
-    .track {
+    .mini-player-track {
         width: 100%;
         height: 4px;
         border-radius: var(--border-radius);
